--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -90,41 +90,16 @@ button {
   @include button 
 }
 
-.home_page {
-  // @apply bg-white
-}
+// .home_page {
+//   // @apply bg-white
+// }
 
-header {
-  background-color: white;
-  @include nav_bar;
-  z-index: 200;
-
-  li {
-    &.li-selected {
-      a {
-        border-bottom: $border1 $ca-or-100;
-
-        &:hover {
-          border-bottom: $border1 $ca-or-100;
-        }
-      }
-    }
-  }
-}
-
-
-.nav_bar {
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-
-.box-shadow {
-  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
-  background-color: $blue-primary;
-}
+// .box-shadow {
+//   -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+//   -moz-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+//   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+//   background-color: $blue-primary;
+// }
 
 // .lang_en {
 //   font-weight: $extra-bold;
@@ -264,11 +239,11 @@ header {
         }
       }
     }
-
+  
     .grid_container {
       width: 100%;
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
+      grid-template-columns: repeat(3, 6% 18% 5%);
       grid-template-rows: auto auto;
       gap: 10px;
       .grid_item {
@@ -276,7 +251,7 @@ header {
         flex-direction: column;
         justify-content: space-between;
         color: white;
-        padding: 2rem 4rem;
+        padding: 2rem 2.6rem;
         border-radius: 8px;
         max-height: fit-content;
         background-size: cover;
@@ -284,37 +259,37 @@ header {
       }
       .top_left {
         background: linear-gradient(139deg, rgba(83, 64, 255, 0.9) 0%, rgba(111, 199, 255, 0.9) 100%);
-        grid-column: 1 / 2;
+        grid-column: 1 / 3;
         grid-row: 1 / 2;
       }
   
       .top_mid {
         background: linear-gradient(25deg, rgba(83, 64, 255, 0.9) 44%, rgba(111, 199, 255, 0.9) 100%);
-        grid-column: 2 / 4;
+        grid-column: 3 / 7;
         grid-row: 1 / 2;
       }
   
       .top_right {
         background: linear-gradient(320deg, rgba(83, 64, 255, 0.9) 0%, rgba(196, 141, 116, 0.9) 100%);
-        grid-column: 4 / 6;
+        grid-column: 7 / 10;
         grid-row: 1 / 2;
       }
   
       .bottom_left {
         background: linear-gradient(to top, rgba(83, 64, 255, 0.9) 0%, rgba(83, 64, 255, 0.9) 30%, rgba(196, 141, 116, 0.9) 100%);
-        grid-column: 1 / 3;
+        grid-column: 1 / 4;
         grid-row: 2 / 3;
       }
   
       .bottom_mid {
         background: linear-gradient(225deg, rgba(255, 127, 0, 0.87) 0%, rgba(192, 112, 168, 0.89) 100%);
-        grid-column: 3 / 4;
+        grid-column: 4 / 7;
         grid-row: 2 / 3;
       }
   
       .bottom_right {
         background: linear-gradient(180deg, rgba(255, 127, 0, 0.87) 0%, rgba(133, 90, 186, 0.93) 70%);
-        grid-column: 4 / 6;
+        grid-column: 7 / 10;
         grid-row: 2 / 3;
       }
     }
@@ -324,7 +299,11 @@ header {
       .grid_container {
         display: flex;
         flex-direction: column;
+        .grid_item {
+          padding: 1.6rem 3.4rem 1.6rem 2rem
+        }
       }
+       
       
       .bottom_right {
         background: linear-gradient(180deg, rgba(255,127,0,0.87) 0%, rgba(133,90,186,0.93) 70%);
