--- a/app/sass/partials/_headermenu.sass
+++ b/app/sass/partials/_headermenu.sass
@@ -1,29 +1,49 @@
 @import "../lib/_variables.sass"
 @import "../lib/_mixins.sass"
 
+
+@mixin nav_bar 
+    @media (max-width: 600px) 
+        @include nav_bar_phone
+        
+    @media (min-width: 601px) 
+        @include nav_bar_two_lines
+        @include lang_switcher_top_absolute
+    
+    @media (min-width: 750px)
+        @include lang_switcher_menu_relative 
+
+    @media (min-width: 970px) 
+        @include nav_bar_one_line
+
+    @media (min-width: 1400px)
+        @include nav_bar_one_line_xl
+
+    
+header 
+  background-color: white
+  @include nav_bar
+  z-index: 200
+
+  li 
+    &.li-selected 
+      a 
+        border-bottom: $border1 $ca-or-100
+        &:hover 
+          border-bottom: $border1 $ca-or-100
+        
+.nav_bar 
+  position: fixed
+  top: 0
+  left: 0
+
+
+
+
 @media (min-width: 150px)         
-    // header 
-    //     background-color: white
-    //     @include nav_bar
-    //     z-index: 200
-
-    //     li 
-    //         &.li-selected 
-    //         a 
-    //             border-bottom: $border1 $ca-or-100
-
-    //             &:hover 
-    //             border-bottom: $border1 $ca-or-100
-            
-    //     .nav_bar 
-    //         position: fixed
-    //         top: 0
-    //         left: 0
-
-
     .lang_switcher 
         @apply text-gray-600
-        margin-left: 1.6rem
+        margin-left: 2.4rem
         display: flex
         flex-direction: column
         align-items: flex-end
@@ -36,11 +56,6 @@
             margin: 0rem 0.6rem 0 0
         a:last-child
             margin-left: 0.26rem
-
-    .nav_bar 
-        position: fixed
-        top: 0
-        left: 0
         
 
 @media (max-width: 600px)
@@ -50,40 +65,13 @@
         
     .responsive-shown 
         display: block !important
-@media (min-width: 601px) 
-    .lang_switcher
-        position: absolute
-        right: 2rem
-        top: 1.9rem
-        div
-            margin: 0rem 
-    .menu
-        ul
-            gap: 2rem
 
     
-@media (min-width: 700px)
-    // .menu
-    //     gap: 1rem
-    //     width: 100%
-    //     font-weight: $semi-bold
-    //     margin: 0
-    //     padding: 2rem 3rem 0 3rem
-        
+
+    
+
            
 
-@media (min-width: 900px)
-    .lang_switcher
-        position: relative
-        right: 0rem
-        top: 0rem
-    header 
-        //padding: 1.5rem 0 1.6rem 0;
 
-        // ul 
-        //     display: flex
-        //     flex-flow: wrap row
-        //     justify-content: space-between
-        //     font-size: 1.2rem
- 
-
+    
+   
