prueba framer motion

--- a/app/sass/partials/_home.sass
+++ b/app/sass/partials/_home.sass
@@ -21,12 +21,12 @@
         @include drop-shadow-lighter
         display: flex
         flex-direction: row
-        background: #fef2cb
+        @apply bg-ca_blue-50
         gap: 1rem
         border-radius:24px
         padding: 1rem 1rem 2rem 1rem
         //border: 8px $ca-or-100 solid
-        @apply text-orange-500
+        @apply text-orange-400
         
         .award_icon 
             border-radius: 70px
@@ -40,10 +40,10 @@
             align-self: center
             align-items: center
             h3
-                @apply text-orange-600
+                @apply text-ca_blue-600
                 margin-bottom: 0.1rem   
             h4
-                @apply text-gray-600
+                @apply text-ca_blue-400
             small
                 @apply  text-gray-600
                 padding-bottom: 1rem
