Navegador y banners metidos en mixins para adaptarse según la clase de idioma. Variables de media queries

--- a/app/sass/lib/_variables.sass
+++ b/app/sass/lib/_variables.sass
@@ -21,6 +21,22 @@ $ca-or-300: #ff9900
 $ca-or-200: #ffbd1b
 $ca-or-100: #ffe685
 
+//MEDIA QUERIES
+//ES
+$min-phone-width-es: 150px
+$max-phone-width-es: 600px
+$min-tablet-width-es: 601px
+$inter-tablet-width-es: 750px
+$min-desktop-width-es: 970px
+$min-xl-desktop-width-es: 1400px
+//EN
+$min-phone-width-en: 150px
+$max-phone-width-en: 600px
+$min-tablet-width-en: 601px
+$inter-tablet-width-en: 650px
+$min-desktop-width-en: 860px
+$min-xl-desktop-width-en: 1400px
+
 //SPACING 
 // esto está mal planteado y por eso no se usa, no sirve para responsive porque
 // el espaciado está planteado en pixeles
