--- a/app/sass/lib/_mixins.sass
+++ b/app/sass/lib/_mixins.sass
@@ -305,3 +305,138 @@
         .isotype
             .logoheader
                 width: 3.25rem
+@mixin li_nav_bar
+  li 
+    &.li-selected 
+      a 
+        border-bottom: $border1 $ca-or-100
+        &:hover 
+          border-bottom: $border1 $ca-or-100
+//ES
+@mixin nav_bar_es
+    @media (max-width: $max-phone-width-es) 
+        @include nav_bar_phone
+
+    @media (min-width: $min-tablet-width-es) 
+        @include nav_bar_two_lines
+        @include lang_switcher_top_absolute
+
+    //este media query no cambia la estructura, sólo cambia
+    //de lugar el idioma en el header
+    @media (min-width: $inter-tablet-width-es)
+        @include lang_switcher_menu_relative 
+
+    @media (min-width: $min-desktop-width-es) 
+        @include nav_bar_one_line
+
+    @media (min-width: $min-xl-desktop-width-es)
+        @include nav_bar_one_line_xl
+
+//EN
+@mixin nav_bar_en
+    @media (max-width: $max-phone-width-en) 
+        @include nav_bar_phone
+
+    @media (min-width: $min-tablet-width-en) 
+        @include nav_bar_two_lines
+        @include lang_switcher_top_absolute
+
+    //este media query no cambia la estructura, sólo cambia
+    //de lugar el idioma en el header
+    @media (min-width: $inter-tablet-width-en)
+        @include lang_switcher_menu_relative 
+
+    @media (min-width: $min-desktop-width-en) 
+        @include nav_bar_one_line
+
+    @media (min-width: $min-xl-desktop-width-en)
+        @include nav_bar_one_line_xl
+
+//ES
+@mixin content_page_es
+    @media (min-width: $min-phone-width-es)      
+        .banner
+            margin-top: 46px
+            height: 7.4em
+            background-image: url("/assets/img/headers/projects-banner-phone.svg")
+            background-size: cover
+            background-position: center
+            background-repeat: no-repeat
+            // object-fit: cover;
+            display: flex
+            align-items: flex-end
+            h1 
+                color: white
+        #banner-publications
+            background-image: url("/assets/img/headers/publications-banner-phone.svg")
+        .parallax__layer
+            margin-top: 74px
+    @media (min-width:$min-tablet-width-es)     
+        .banner
+            margin-top: 112px
+            height: 14vw
+            width: 100%
+            background-image: url("/assets/img/headers/projects-banner-desktop.svg")
+        #banner-publications
+            background-image: url("/assets/img/headers/publications-banner-desktop.svg")
+        .parallax__layer
+            margin-top: 132px
+
+    @media (min-width:$min-desktop-width-es) 
+        .banner
+            margin-top: 60px
+            height: 14vw
+        .parallax__layer
+            margin-top: 90px
+
+    @media (min-width:$min-xl-desktop-width-es) 
+        .banner
+            margin-top: 72px
+            height: 14vw
+        .head
+            margin-top: 72px
+
+// EN
+@mixin content_page_en
+    @media (min-width: $min-phone-width-en)      
+        .banner
+            margin-top: 46px
+            height: 7.4em
+            background-image: url("/assets/img/headers/projects-banner-phone.svg")
+            background-size: cover
+            background-position: center
+            background-repeat: no-repeat
+            // object-fit: cover;
+            display: flex
+            align-items: flex-end
+            h1 
+                color: white
+        #banner-publications
+            background-image: url("/assets/img/headers/publications-banner-phone.svg")
+        .parallax__layer
+            margin-top: 74px
+    @media (min-width:$min-tablet-width-en)     
+        .banner
+            margin-top: 112px
+            height: 14vw
+            width: 100%
+            background-image: url("/assets/img/headers/projects-banner-desktop.svg")
+        #banner-publications
+            background-image: url("/assets/img/headers/publications-banner-desktop.svg")
+        .parallax__layer
+            margin-top: 132px
+
+    @media (min-width:$min-desktop-width-en) 
+        .banner
+            margin-top: 60px
+            height: 14vw
+        .parallax__layer
+            margin-top: 90px
+
+    @media (min-width:$min-xl-desktop-width-en) 
+        .banner
+            margin-top: 72px
+            height: 14vw
+        .head
+            margin-top: 72px
+
