Cambios en home, award responsive, input research arreglados (alineacion), detalles

--- a/app/sass/partials/_courses.sass
+++ b/app/sass/partials/_courses.sass
@@ -18,12 +18,15 @@ $windowWidth: 100vw
             display: -webkit-box
             //max-height: $windowHeight/7.2
             small 
+                max-width: 10rem
                 // margin-top:0.6rem
                 // display: -webkit-box
                 // // -webkit-line-clamp: 5
                 // -webkit-box-orient: vertical
                 // overflow: hidden
                 // text-overflow: ellipsis
+        .course_text-block
+            max-width: 46rem
     .card_container_top 
         display: flex
         justify-content: space-between 
@@ -69,6 +72,7 @@ $windowWidth: 100vw
             // transform: translateY(64%)
             width: 100%
             display: flex
+            
             flex-direction: column
             .course_description
                 transition: ease-in-out 300ms
