--- a/app/sass/partials/_footer.sass
+++ b/app/sass/partials/_footer.sass
@@ -16,7 +16,7 @@
                 font-size: 16px //mientras no furule la hoja de _type.sass
                 margin-bottom: 1rem
                 h5
-                    line-height: 1.6rem
+                    //line-height: 2rem
         .footer_mid_1
             display: flex
             text-align: center
