--- a/app/globals.css
+++ b/app/globals.css
@@ -110,6 +110,12 @@
     font-weight: 400;
     display: -webkit-box;
   }
+  .course .course_description small {
+    max-width: 10rem;
+  }
+  .course .course_text-block {
+    max-width: 46rem;
+  }
   .card_container_top {
     display: flex;
     justify-content: space-between;
@@ -287,7 +293,7 @@ header li.li-selected a:hover {
   }
   .lang_switcher div {
     display: flex;
-    margin: 3rem 0 0.6rem 0;
+    margin: 1.7rem 0 0.6rem 0;
     align-items: center;
   }
   .lang_switcher svg {
@@ -363,8 +369,13 @@ header li.li-selected a:hover {
   width: 100%;
   height: 100%;
 }
-.about .icon {
+.about .contact_content .icon {
   width: 2rem;
+  height: auto;
+  padding-right: 8px;
+}
+.about .location .icon {
+  width: 1.5rem;
   height: auto;
   padding-right: 8px;
 }
@@ -582,7 +593,6 @@ h4, h5 {
     min-height: 3rem;
     align-content: center;
     margin-right: 1rem;
-    width: 13rem;
     justify-content: flex-end;
   }
   .research .research_results b {
@@ -628,7 +638,6 @@ h4, h5 {
   }
   .filters .filter label {
     display: flex;
-    width: 100%;
     padding-right: 1.6rem;
     margin-bottom: 0.4rem;
     line-height: 120%;
@@ -789,9 +798,10 @@ h4, h5 {
   .research .filters .filter label {
     display: inline-block;
     margin-bottom: 0rem;
+    min-width: 10.2rem;
   }
   .research .filters .filter input {
-    width: 200px;
+    width: 20.6rem;
   }
   .papers {
     display: flex;
@@ -847,11 +857,21 @@ h4, h5 {
     display: flex;
   }
 }
-@media (min-width: 900px) {
-  .filters .filter label {
+@media (min-width: 750px) {
+  .research .filters .filter label {
     width: auto !important;
+    min-width: 6.5rem;
   }
-  .papers .paper .paper_main .paper_content {
+  .research .filters .research-results {
+    margin-top: 0;
+  }
+}
+@media (min-width: 900px) {
+  .research .filters .filter label {
+    width: auto !important;
+    min-width: 6rem;
+  }
+  .research .papers .paper .paper_main .paper_content {
     width: 70%;
   }
 }
@@ -1321,9 +1341,6 @@ h4, h5 {
     font-size: 16px;
     margin-bottom: 1rem;
   }
-  footer .footer_left .footer_subtitle h5 {
-    line-height: 1.6rem;
-  }
   footer .footer_mid_1 {
     display: flex;
     text-align: center;
@@ -1487,7 +1504,7 @@ h4, h5 {
   }
   .group_description img {
     width: 100%;
-    height: 26.3vw;
+    height: 26.2vw;
     -o-object-fit: cover;
        object-fit: cover;
     -o-object-position: 50% 0;
@@ -1495,51 +1512,67 @@ h4, h5 {
   }
   .award_section {
     display: flex;
-    flex-direction: row;
     background: #fff9e6;
-    gap: 1rem;
+    gap: 0.2rem;
     border-radius: 24px;
-    padding: 1rem 2rem 1rem 2rem;
+    padding: 0.8rem;
     border: 2px #ffe685 solid;
     @apply text-orange-500;
-    width: 55%;
+    width: 100%;
+    flex-direction: column;
+    align-self: center;
+    align-items: center;
+    text-align: center;
+  }
+  .award_section .award_title {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    align-items: center;
+    gap: 1rem;
+  }
+  .award_section .award_title div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .award_section h3 {
+    @apply text-slate-600;
+    margin-bottom: 0.3rem;
+  }
+  .award_section h5 {
+    @apply text-gray-600;
+    font-weight: 500;
+    margin-bottom: 0rem;
+  }
+  .award_section small {
+    @apply text-slate-500;
+    padding-bottom: 1rem;
+    display: block;
   }
   .award_section .award_icon {
-    font-size: 7rem;
     border-radius: 70px;
-    min-width: 6rem;
-    height: 6rem;
-    padding: 1.5rem;
+    max-width: 2.4rem;
+    height: 2.4rem;
+    padding: 0.75rem;
+    margin-bottom: 0.8rem;
     background: #ffe489;
     border-radius: 80px;
     @apply text-orange-400;
     box-shadow: 0px 10px 13px -7px rgba(0, 0, 0, 0.08);
   }
-  .award_section .award_card {
-    display: flex;
-    flex-direction: row;
-    align-self: center;
-    align-items: center;
-  }
-  .award_section .award_card h3 {
-    @apply text-slate-600;
-    margin-bottom: 0.6rem;
-  }
-  .award_section .award_card h5 {
-    @apply text-gray-600;
-    font-weight: 500;
-    margin-bottom: 0.5rem;
-  }
-  .award_section .award_card small {
-    @apply text-slate-400;
-    padding-bottom: 1rem;
-    display: block;
-  }
-  .award_section .award_card_text {
-    padding: 0 0 0 1rem;
-  }
 }
 @media (min-width: 600px) {
+  .award_section {
+    width: 85%;
+    padding: 1rem 2rem 1rem 2rem;
+    flex-direction: column;
+  }
+  .award_section .award_icon {
+    min-width: 4rem;
+    height: 4rem;
+    padding: 1.5rem;
+  }
   .group_description {
     width: 100vw;
   }
@@ -1553,11 +1586,41 @@ h4, h5 {
   }
 }
 @media (min-width: 900px) {
+  .award_section {
+    flex-direction: row;
+    width: 70%;
+    text-align: left;
+    gap: 1.2rem;
+    align-self: flex-start;
+  }
+  .award_section .award_title {
+    display: flex;
+    flex-direction: column;
+    align-self: flex-start;
+    justify-content: flex-start;
+  }
+  .award_section .award_title div {
+    flex-direction: column;
+    align-items: flex-start;
+    align-self: flex-start;
+  }
+  .award_section .award_icon {
+    display: flex;
+    border-radius: 70px;
+    min-width: 6rem;
+    height: 6rem;
+    padding: 1.5rem;
+    align-self: flex-start;
+  }
   .group_description img {
     height: 35rem;
   }
 }
 @media (min-width: 1400px) {
+  .award_section {
+    flex-direction: row;
+    width: 60%;
+  }
   .group_description img {
     height: 50rem;
   }
@@ -1969,7 +2032,7 @@ TYPOGRAPHY
   .page_es header .lang_switcher {
     position: absolute;
     right: 2rem;
-    top: 1.9rem;
+    top: 2.4rem;
   }
   .page_es header .lang_switcher div {
     margin: 0rem;
@@ -2203,7 +2266,7 @@ TYPOGRAPHY
   .page_en header .lang_switcher {
     position: absolute;
     right: 2rem;
-    top: 1.9rem;
+    top: 2.4rem;
   }
   .page_en header .lang_switcher div {
     margin: 0rem;
@@ -2406,7 +2469,7 @@ button {
   line-height: 3.35em;
 }
 .home .body {
-  padding-top: 4rem;
+  padding-top: 1rem;
   display: flex;
   flex-direction: column;
   /* Media query for small screens */
@@ -2545,11 +2608,6 @@ button {
   /* Track */
   /* Handle */
   /* Handle on hover */
-}
-.projects .spinner {
-  min-height: calc(100vh - 150px);
-  filter: brightness(0) invert(1);
-  -webkit-filter: brightness(0) invert(1);
 }
 .projects .nav_bar .imagotype .logotype {
   color: #5441ff;
@@ -2693,12 +2751,40 @@ button {
   color: inherit;
 }
 .research li.li-selected a {
-  border-bottom: 5px solid blue;
+  border-bottom: 5px solid #5441ff;
 }
 .research li.li-selected a:hover {
-  border-bottom: 5px solid blue;
+  border-bottom: 5px solid #5441ff;
 }
 .research li a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+.courses {
+  color: inherit;
+}
+.courses li.li-selected a {
+  border-bottom: 5px solid #becaff;
+}
+.courses li.li-selected a:hover {
+  border-bottom: 5px solid #becaff;
+}
+.courses li a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+
+.about {
+  color: inherit;
+}
+.about li.li-selected a {
+  border-bottom: 5px solid #ffbd1b;
+}
+.about li.li-selected a:hover {
+  border-bottom: 5px solid #ffbd1b;
+}
+.about li a:hover {
   color: inherit;
   text-decoration: none;
 }
@@ -2741,9 +2827,6 @@ RESPONSIVE
   }
   .projects main .our_projects .project h3 {
     font-size: 1.5rem;
-  }
-  .about .about_description {
-    padding: 6rem 3rem 6rem 3rem !important;
   }
 }
 @media (max-width: 600px) {
@@ -2912,8 +2995,13 @@ body :not(.menu) a:hover {
   width: 100%;
   height: 100%;
 }
-.about .icon {
+.about .contact_content .icon {
   width: 2rem;
+  height: auto;
+  padding-right: 8px;
+}
+.about .location .icon {
+  width: 1.5rem;
   height: auto;
   padding-right: 8px;
 }
@@ -2969,6 +3057,12 @@ h4, h5 {
     display: flex;
     font-weight: 400;
     display: -webkit-box;
+  }
+  .course .course_description small {
+    max-width: 10rem;
+  }
+  .course .course_text-block {
+    max-width: 46rem;
   }
   .card_container_top {
     display: flex;
@@ -3740,7 +3834,6 @@ h4, h5 {
     min-height: 3rem;
     align-content: center;
     margin-right: 1rem;
-    width: 13rem;
     justify-content: flex-end;
   }
   .research .research_results b {
@@ -3786,7 +3879,6 @@ h4, h5 {
   }
   .filters .filter label {
     display: flex;
-    width: 100%;
     padding-right: 1.6rem;
     margin-bottom: 0.4rem;
     line-height: 120%;
@@ -3947,9 +4039,10 @@ h4, h5 {
   .research .filters .filter label {
     display: inline-block;
     margin-bottom: 0rem;
+    min-width: 10.2rem;
   }
   .research .filters .filter input {
-    width: 200px;
+    width: 20.6rem;
   }
   .papers {
     display: flex;
@@ -4005,11 +4098,21 @@ h4, h5 {
     display: flex;
   }
 }
-@media (min-width: 900px) {
-  .filters .filter label {
+@media (min-width: 750px) {
+  .research .filters .filter label {
     width: auto !important;
+    min-width: 6.5rem;
   }
-  .papers .paper .paper_main .paper_content {
+  .research .filters .research-results {
+    margin-top: 0;
+  }
+}
+@media (min-width: 900px) {
+  .research .filters .filter label {
+    width: auto !important;
+    min-width: 6rem;
+  }
+  .research .papers .paper .paper_main .paper_content {
     width: 70%;
   }
 }
