--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -182,7 +182,7 @@ button {
   }
 
   .body {
-    padding-top: 4rem;
+    padding-top: 1rem;
     display: flex;
     flex-direction: column;
     // width: 100%;
@@ -379,12 +379,6 @@ button {
 .projects {
   background-color: white;
   //padding: 5rem 0 0 0;
-
-  .spinner {
-    min-height: calc(100vh - 150px);
-    filter: brightness(0) invert(1);
-    -webkit-filter: brightness(0) invert(1);
-  }
 
   .nav_bar {
     .imagotype {
@@ -605,28 +599,13 @@ button {
 
 .research {
   color: inherit;
-
-//   .nav_bar {
-
-//     .imagotype {
-
-//       .isotype {
-//         background-color: $black;
-//       }
-
-//       .logotype {
-//         color: $black;
-//         font-weight: $black;
-//       }
-//     }
-
     li {
       &.li-selected {
         a {
-          border-bottom: $border1 blue;
+          border-bottom: $border1 $ca_blue_600;
 
           &:hover {
-            border-bottom: $border1 blue;
+            border-bottom: $border1 $ca_blue_600;
           }
         }
       }
@@ -640,6 +619,51 @@ button {
       }
     }
   }
+.courses {
+    color: inherit;
+      li {
+        &.li-selected {
+          a {
+            border-bottom: $border1 $ca_blue_300;
+  
+            &:hover {
+              border-bottom: $border1 $ca_blue_300;
+            }
+          }
+        }
+  
+        a {
+  
+          &:hover {
+            color: inherit;
+            text-decoration: none;
+          }
+        }
+      }
+    }
+.about {
+    color: inherit;
+      li {
+        &.li-selected {
+          a {
+            border-bottom: $border1 $ca-or-200;
+  
+            &:hover {
+              border-bottom: $border1 $ca-or-200;
+            }
+          }
+        }
+  
+        a {
+  
+          &:hover {
+            color: inherit;
+            text-decoration: none;
+          }
+        }
+      }
+    }
+  
 
 /* =========================================================================
 LINKS
@@ -708,11 +732,7 @@ RESPONSIVE
     }
   }
 
-  .about {
-    .about_description {
-      padding: 6rem 3rem 6rem 3rem !important;
-    }
-  }
+  
 }
 
 //MÓVIL MEDIA QUERY
