--- a/app/sass/partials/_contact.sass
+++ b/app/sass/partials/_contact.sass
@@ -59,10 +59,16 @@
                 left: 0
                 width: 100%
                 height: 100%
-    .icon
-        width: 2rem
-        height: auto
-        padding-right: $spacing-xsm
+    .contact_content
+        .icon
+            width: 2rem
+            height: auto
+            padding-right: $spacing-xsm
+    .location
+        .icon
+            width: 1.5rem
+            height: auto
+            padding-right: $spacing-xsm
 h5
 
 h4, h5
