--- a/app/sass/main.css
+++ b/app/sass/main.css
@@ -78,11 +78,8 @@
     font-weight: 400;
     display: -webkit-box;
   }
-  .course .course_description small {
-    max-width: 10rem;
-  }
-  .course .course_text-block {
-    max-width: 46rem;
+  .course_text_block {
+    max-width: 40rem;
   }
   .card_container_top {
     display: flex;
@@ -152,6 +149,7 @@
     margin-top: 0.14rem;
   }
   .course .course_text_block {
+    max-width: 55rem;
     transition: ease-in-out 300ms;
     width: 100%;
     display: flex;
@@ -185,6 +183,11 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+  }
+}
+@media (min-width: 1400px) {
+  .course .course_text_block {
+    max-width: 100rem;
   }
 }
 .bg-blue-gradient {
